# SmileBooth

./: .gitignore  ADMIN_SETTINGS_IMPLEMENTATION.md  AGENTS.md  ANALISIS_COMPLETO_PRODUCCION.md  ANALISIS_UI_UX_PROFUNDO.md  CORRECIONES_APLICADAS.md  DEBUG_IMAGENES.md  DEPLOYMENT.md  DESCUBRIMIENTO_PROBLEMA_REAL.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_IMPLEMENTADO.md  DISEÑO_UI_UX_DETALLADO.md  FASE1_UI_UX_COMPLETADA.md  FASE2_PULIDO_COMPLETADO.md  FASE3A_COMPLETADA.md  FIXES_PERSISTENCIA_APLICADOS.md  FIX_PREVIEW_422.md  GUIA_DISEÑOS_CANVA.md  INVESTIGACION_PRODUCCION_FINAL.md  LAYOUT_CONFIG_SNIPPET.tsx  LAYOUT_TIRAS_FOTOS.md  MEJORAS_UI_UX.md  OPCION_A_PROGRESO.md  PHOTOBOOTH_PLAN_PRODUCTO.md  PHOTOBOOTH_STACK_TECNOLOGICO.md  PLAN_AJUSTADO.md  PLAN_MEJORAS_PRIORITARIAS.md  PLAN_MVP_EJECUTIVO.md  PROJECT_BRIEF.md  QUE_ESTAMOS_CONSTRUYENDO.md  QUE_FALTA_POR_HACER.md  README.md  README_PROBLEMA_ELECTRON.md  REFACTORING_TEMPLATES_GUIDE.md  RESUMEN_SESION_FINAL.md  SETUP_INSTRUCCIONES.md  SHADCN_COMPLETADO.md  SHADCN_INTEGRACION_PROGRESO.md  SIMPLIFICACION_SISTEMA.md  SISTEMA_DE_EVENTOS_GUIA.md  (+7 more)
backend/: install.sh  pyproject.toml  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: camera.py  config_api.py  designs.py  gallery.py  image.py  presets.py  print.py  sessions.py  settings.py  templates.py
backend/app/models/: preset.py  template.py
backend/app/schemas/: camera.py  image.py  session.py  settings.py
backend/app/services/: camera_service.py  demo_assets.py  image_jobs.py  image_service.py  print_queue.py  print_service.py  (+1 more)
(+115 files in other folders)
