[project]
name = "photobooth-backend"
version = "0.1.0"
description = "Backend API para PhotoBooth profesional"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.20",
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "qrcode>=8.0",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
]
